JSAI/error/src/test/resources/base/notjslibrary_a005.js
var i = "hello" * 2;
var q = i + "";
print(q);
q
